syntax = "proto3";
option go_package = "/message";



//用户登录
message LoginRequest {
  string account = 1; //账号
  string password = 2; //密码
}
//用户登录
message LoginResponse {
  int64 playerId = 1; //玩家id
}

//心跳消息
message HeartRequest{

}
//心跳消息
message HeartResponse{
}








